--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,30 @@ config.log
 debian/ganeti-instance-debootstrap.debhelper.log
 debian/ganeti-instance-debootstrap
 debian/files
+debian/ganeti-instance-debootstrap.default
+debian/ganeti-instance-debootstrap.postinst.debhelper
+debian/ganeti-instance-debootstrap.postrm.debhelper
+debian/ganeti-instance-debootstrap.preinst.debhelper
+debian/ganeti-instance-debootstrap.prerm.debhelper
+debian/ganeti-instance-debootstrap.debhelper.log
+debian/ganeti-instance-debootstrap.substvars
+debian/ganeti-instance-debootstrap
+debian/files
+Makefile
+Makefile.in
+configure
+common.sh
+build-stamp
+install-stamp
+config.log
+config.status
+debian/autoreconf.after
+debian/autoreconf.before
+debian/debhelper-build-stamp
+test-suite.log
+test
+.pc
+aclocal.m4
+autom4te.cache
+autotools
+debian/patches
